welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:1: error: Missing closing brace `}' assumed here
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
^